[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-retry"
version = "0.1.0"
description = "Zero-dependency Python library for resilient LLM agent calls — exponential backoff, jitter, fallback chains, and dead letter queues."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Darshankumar Joshi", email = "darshjme@gmail.com" }
]
keywords = ["llm", "retry", "fallback", "ai", "agent", "backoff", "resilience"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/darshjme-codes/agent-retry"
Repository = "https://github.com/darshjme-codes/agent-retry"
"Bug Tracker" = "https://github.com/darshjme-codes/agent-retry/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["agent_retry"]
